--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messed up Juli</title>
+    <title>You broke my heart 💔</title>
     <style>
   body {
     background-color: black;
